Change run.sh from /bin/sh -c to exec. Conf option can pass to spark-submit in this case. Update README.md with configuration tips.